--- a/CPP01/Makefile
+++ b/CPP01/Makefile
@@ -1,37 +1,29 @@
-# Nazwa programu
 TARGET = phonebook
 
-# Kompilator
-CXX = g++
+CC = g++
 
-# Flagi kompilatora
-CXXFLAGS = -Wall -Wextra -std=c++11
+CFLAGS = -Wall -Wextra -std=c++11
 
-# Pliki nagłówkowe
 HEADERS = pbook.hpp
 
-# Pliki źródłowe
-SRCS = main.cpp add.cpp utils.cpp
+SRCS = main.cpp add.cpp utils.cpp search.cpp
 
-# Pliki obiektowe (po kompilacji)
 OBJS = $(SRCS:.cpp=.o)
 
-# Reguła domyślna
 all: $(TARGET)
 
-# Reguła kompilacji pliku wykonywalnego
 $(TARGET): $(OBJS)
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
 
-# Reguła kompilacji plików obiektowych
 %.o: %.cpp $(HEADERS)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
-# Reguła czyszcząca pliki obiektowe i binarne
 clean:
 	rm -f $(OBJS)
 
 fclean:
 	rm -f $(OBJS) $(TARGET)
+
+re: fclean all
 
 .PHONY: all clean clean-all
