--- a/08/ex00/Makefile
+++ b/08/ex00/Makefile
@@ -4,14 +4,20 @@ NAME = easyfind
 
 CC = c++ -Wall -Wextra -Werror -std=c++98
 
+SRC = main.cpp
+OBJ = $(SRC:.cpp=.o)
+
 all: $(NAME)
 
-$(NAME): $(SRC)
-	$(CC) $(SRC) -o $(NAME)
+$(NAME): $(OBJ)
+	$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 clean:
-	rm -rf $(NAME)
+	$(RM) $(OBJ)
 
 fclean: clean
+	$(RM) $(NAME)
 
-re: fclean all
+re: fclean $(NAME)
+
+.PHONY: all clean fclean re
